--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -20,7 +20,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="45"/>
+      <BuildNr Value="47"/>
       <Language Value="0416"/>
       <StringTable CompanyName="Rúbio R. C. Terra (rubio.terra@gmail.com)" FileDescription="Ferramenta para associação de textos bíblicos" ProductName="iBiblia" ProductVersion="0.0.0.0"/>
     </VersionInfo>
@@ -139,12 +139,12 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="28">
+    <Units Count="30">
       <Unit0>
         <Filename Value="iBiblia.lpr"/>
         <IsPartOfProject Value="True"/>
         <WindowIndex Value="1"/>
-        <CursorPos Y="18"/>
+        <CursorPos Y="25"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
       </Unit0>
@@ -155,10 +155,11 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formPrincipal"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="2"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="337"/>
-        <CursorPos Y="356"/>
+        <TopLine Value="653"/>
+        <CursorPos Y="677"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -167,7 +168,7 @@
         <Filename Value="versiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Versiculo"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="11"/>
         <WindowIndex Value="1"/>
         <TopLine Value="387"/>
         <CursorPos Y="399"/>
@@ -187,17 +188,16 @@
         <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <CursorPos X="18"/>
-        <UsageCount Value="133"/>
+        <UsageCount Value="132"/>
       </Unit3>
       <Unit4>
         <Filename Value="projeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="6"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="249"/>
-        <CursorPos X="32" Y="273"/>
+        <TopLine Value="1064"/>
+        <CursorPos Y="1084"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -210,10 +210,10 @@
         <Filename Value="sugestao.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sugestao"/>
-        <EditorIndex Value="15"/>
+        <EditorIndex Value="17"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="598"/>
-        <CursorPos Y="398"/>
+        <TopLine Value="406"/>
+        <CursorPos X="3" Y="413"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
       </Unit5>
@@ -223,7 +223,7 @@
         <ComponentName Value="FormNovoProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="15"/>
         <WindowIndex Value="1"/>
         <TopLine Value="82"/>
         <CursorPos X="13" Y="84"/>
@@ -237,7 +237,7 @@
         <ComponentName Value="frmDictionaryPopup"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="14"/>
         <WindowIndex Value="1"/>
         <TopLine Value="127"/>
         <CursorPos Y="165"/>
@@ -249,7 +249,7 @@
         <Filename Value="rtfedit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="RTFEdit"/>
-        <EditorIndex Value="18"/>
+        <EditorIndex Value="20"/>
         <WindowIndex Value="1"/>
         <TopLine Value="210"/>
         <CursorPos Y="139"/>
@@ -262,7 +262,7 @@
         <ComponentName Value="FormPropProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="17"/>
+        <EditorIndex Value="19"/>
         <WindowIndex Value="1"/>
         <TopLine Value="49"/>
         <CursorPos Y="59"/>
@@ -274,7 +274,7 @@
         <Filename Value="memoversiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="MemoVersiculo"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="18"/>
         <WindowIndex Value="1"/>
         <TopLine Value="39"/>
         <CursorPos Y="53"/>
@@ -287,7 +287,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="25"/>
         <CursorPos X="51" Y="45"/>
-        <UsageCount Value="6"/>
+        <UsageCount Value="5"/>
       </Unit11>
       <Unit12>
         <Filename Value="PCRE.pas"/>
@@ -305,7 +305,7 @@
         <ComponentName Value="frmExportarProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="8"/>
         <WindowIndex Value="1"/>
         <TopLine Value="49"/>
         <CursorPos Y="64"/>
@@ -317,7 +317,7 @@
         <Filename Value="exportarprojeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ExportarProjeto"/>
-        <EditorIndex Value="14"/>
+        <EditorIndex Value="16"/>
         <WindowIndex Value="1"/>
         <TopLine Value="362"/>
         <CursorPos X="29" Y="284"/>
@@ -330,7 +330,7 @@
         <ComponentName Value="FrmMesclarProjetos"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="20"/>
+        <EditorIndex Value="22"/>
         <WindowIndex Value="1"/>
         <CursorPos X="21" Y="30"/>
         <UsageCount Value="213"/>
@@ -343,7 +343,7 @@
         <ComponentName Value="FrmEscolherVerseRules"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="19"/>
+        <EditorIndex Value="21"/>
         <WindowIndex Value="1"/>
         <CursorPos X="42" Y="9"/>
         <UsageCount Value="228"/>
@@ -377,13 +377,13 @@
         <WindowIndex Value="1"/>
         <TopLine Value="93"/>
         <CursorPos X="23" Y="122"/>
-        <UsageCount Value="46"/>
+        <UsageCount Value="45"/>
       </Unit19>
       <Unit20>
         <Filename Value="onttokenizer.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ONTTokenizer"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="9"/>
         <WindowIndex Value="1"/>
         <CursorPos X="3" Y="50"/>
         <UsageCount Value="202"/>
@@ -393,7 +393,7 @@
         <Filename Value="ontparser.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ONTParser"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="10"/>
         <WindowIndex Value="1"/>
         <TopLine Value="275"/>
         <CursorPos Y="291"/>
@@ -404,10 +404,10 @@
         <Filename Value="sintagma.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sintagma"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="12"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="696"/>
-        <CursorPos Y="709"/>
+        <TopLine Value="557"/>
+        <CursorPos Y="575"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit22>
@@ -416,7 +416,7 @@
         <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="81"/>
-        <UsageCount Value="3"/>
+        <UsageCount Value="2"/>
       </Unit23>
       <Unit24>
         <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\packages\fcl-db\src\base\dataset.inc"/>
@@ -424,7 +424,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="1886"/>
         <CursorPos X="3" Y="1889"/>
-        <UsageCount Value="6"/>
+        <UsageCount Value="5"/>
       </Unit24>
       <Unit25>
         <Filename Value="C:\tools\lazarus\lcl\lcltranslator.pas"/>
@@ -433,15 +433,15 @@
         <WindowIndex Value="1"/>
         <TopLine Value="549"/>
         <CursorPos X="69" Y="504"/>
-        <UsageCount Value="24"/>
+        <UsageCount Value="23"/>
       </Unit25>
       <Unit26>
         <Filename Value="C:\tools\lazarus\lcl\include\treeview.inc"/>
         <EditorIndex Value="3"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="1903"/>
-        <CursorPos Y="1922"/>
-        <UsageCount Value="10"/>
+        <TopLine Value="1003"/>
+        <CursorPos Y="1022"/>
+        <UsageCount Value="13"/>
         <Loaded Value="True"/>
       </Unit26>
       <Unit27>
@@ -451,129 +451,125 @@
         <WindowIndex Value="1"/>
         <TopLine Value="2873"/>
         <CursorPos X="5" Y="2892"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="9"/>
       </Unit27>
+      <Unit28>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\packages\fcl-db\src\sqlite\customsqliteds.pas"/>
+        <UnitName Value="CustomSqliteDS"/>
+        <EditorIndex Value="7"/>
+        <WindowIndex Value="1"/>
+        <TopLine Value="1159"/>
+        <CursorPos Y="1178"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit28>
+      <Unit29>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\classes\lists.inc"/>
+        <EditorIndex Value="13"/>
+        <WindowIndex Value="1"/>
+        <TopLine Value="617"/>
+        <CursorPos Y="636"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit29>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="27">
+    <JumpHistory Count="24" HistoryIndex="23">
       <Position1>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1300" TopLine="1282"/>
+        <Filename Value="C:\tools\lazarus\lcl\include\treeview.inc"/>
+        <Caret Line="1631" TopLine="1612"/>
       </Position1>
       <Position2>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1486" TopLine="1466"/>
+        <Filename Value="C:\tools\lazarus\lcl\include\treeview.inc"/>
+        <Caret Line="480" TopLine="461"/>
       </Position2>
       <Position3>
         <Filename Value="projeto.pas"/>
-        <Caret Line="719" TopLine="701"/>
+        <Caret Line="1250" Column="19" TopLine="1282"/>
       </Position3>
       <Position4>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1486" TopLine="1466"/>
+        <Caret Line="1310" Column="27" TopLine="1291"/>
       </Position4>
       <Position5>
         <Filename Value="projeto.pas"/>
-        <Caret Line="719" TopLine="701"/>
+        <Caret Line="1265" TopLine="1275"/>
       </Position5>
       <Position6>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1300" TopLine="1281"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="575" TopLine="557"/>
       </Position6>
       <Position7>
-        <Filename Value="C:\tools\lazarus\lcl\include\treeview.inc"/>
-        <Caret Line="520" TopLine="501"/>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\classes\lists.inc"/>
+        <Caret Line="636" TopLine="617"/>
       </Position7>
       <Position8>
-        <Filename Value="formpropprojeto.pas"/>
-        <Caret Line="54" Column="15" TopLine="42"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="575" TopLine="557"/>
       </Position8>
       <Position9>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="616" TopLine="595"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="971" TopLine="952"/>
       </Position9>
       <Position10>
         <Filename Value="formprincipal.pas"/>
-        <Caret Line="141" Column="22" TopLine="116"/>
+        <Caret Line="356" TopLine="337"/>
       </Position10>
       <Position11>
-        <Filename Value="formpropprojeto.pas"/>
-        <Caret Line="59" TopLine="49"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="137" Column="15" TopLine="119"/>
       </Position11>
       <Position12>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="719" TopLine="700"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="675" Column="91" TopLine="653"/>
       </Position12>
       <Position13>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1486" TopLine="1466"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="134" Column="15" TopLine="116"/>
       </Position13>
       <Position14>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1300" TopLine="1282"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="617" Column="8" TopLine="595"/>
       </Position14>
       <Position15>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="719" TopLine="700"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="628" Column="31" TopLine="595"/>
       </Position15>
       <Position16>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1486" TopLine="1466"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="624" Column="3" TopLine="595"/>
       </Position16>
       <Position17>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="719" TopLine="692"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="625" Column="18" TopLine="595"/>
       </Position17>
       <Position18>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1486" TopLine="1467"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="626" TopLine="595"/>
       </Position18>
       <Position19>
         <Filename Value="formprincipal.pas"/>
-        <Caret Line="356" TopLine="337"/>
+        <Caret Line="624" TopLine="606"/>
       </Position19>
       <Position20>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1486" TopLine="1467"/>
+        <Filename Value="C:\tools\lazarus\lcl\include\treeview.inc"/>
+        <Caret Line="1022" TopLine="1003"/>
       </Position20>
       <Position21>
         <Filename Value="projeto.pas"/>
-        <Caret Line="137" Column="18" TopLine="132"/>
+        <Caret Line="1084" TopLine="1065"/>
       </Position21>
       <Position22>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1336" Column="32" TopLine="1315"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="293" TopLine="274"/>
       </Position22>
       <Position23>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1526" Column="21" TopLine="1485"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="625" TopLine="606"/>
       </Position23>
       <Position24>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="720" Column="10" TopLine="699"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="623" TopLine="607"/>
       </Position24>
-      <Position25>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1232" Column="39" TopLine="1225"/>
-      </Position25>
-      <Position26>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="164" Column="15" TopLine="147"/>
-      </Position26>
-      <Position27>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="2064" Column="30" TopLine="2051"/>
-      </Position27>
-      <Position28>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="270" Column="67" TopLine="249"/>
-      </Position28>
-      <Position29>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="2065" Column="28" TopLine="2046"/>
-      </Position29>
-      <Position30>
-        <Filename Value="projeto.pas"/>
-      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
